--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,12 @@
     "antd": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "solc": "^0.8.20",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "web3": "^4.2.0"
+    "web3": "^1.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
